# rust_presentation

./: presentation.md
demo_for_presentation/: Cargo.toml
fib_demo/: Cargo.toml
fib_demo/src/: fifth.rs  first.rs  fourth.rs  second.rs  seventh.rs  sixth.rs  third.rs
